--- a/Red_Social_Citas/Views/Usuario/Registrar8.cshtml
+++ b/Red_Social_Citas/Views/Usuario/Registrar8.cshtml
@@ -5,6 +5,7 @@
 <div class="row">
     <div class="col-md-8">
         <h2>Fin de la encuesta</h2>
+        <p>Solo faltaria subir tu foto de perfil y listo</p>
     </div>
 
     <div class="col-md-4">
@@ -22,11 +23,11 @@
     <div class="row">
         <div class="pregunta">
             <h3>
-                Subir 3 fotos:
+                Subir foto de perfil:
             </h3>
             <div class="opcion">
                 <input type="file" name="foto1" accept="image/*" onchange="readURL(this);" />
-                <img id="foto1" src="#"  />
+                <img id="foto1" src="~/Images/fotoPerfil.jpg" width="242" height="200" />
             </div>
             @*<div class="opcion">
                 <input type="file" name="foto2" accept="image/*" />
