--- a/Red_Social_Citas/Content/estilos.css
+++ b/Red_Social_Citas/Content/estilos.css
@@ -24,5 +24,18 @@
     margin-left:30px;
 }
 
+.nopadding{
+   padding: 0 !important;
+   margin: 0 !important;
+}
+
+.negritaPorcentaje{
+    font-size:40px;
+    font-weight:bold;
+}
+
+.negrita{
+    font-weight:bold;
+}
 
 
