--- a/Red_Social_Citas/Views/Usuario/Mensajes.cshtml
+++ b/Red_Social_Citas/Views/Usuario/Mensajes.cshtml
@@ -1,5 +1,45 @@
 ﻿@{
     ViewBag.Title = "Mensajes";
+    Layout = "~/Views/Shared/_Login-Layout.cshtml";
 }
 
-<h2>Mensajes</h2>
+
+<div class="row">
+    <div class="col-md-2 nopadding">
+        <img src="~/Fotos/@ViewBag.foto1" width="200" height="160" />
+    </div>
+    <div class="col-md-8 nopadding">
+        <div class=" panel panel-default">
+            <div class="panel-heading">Mensajes</div>
+            <div class="panel-body" style="min-height:30em">
+                <div id="texto">
+                    @{Html.RenderPartial("EnviarMensaje");}
+                </div>
+                <div>
+                    @using (Ajax.BeginForm("EnviarMensaje", "Usuario", new AjaxOptions
+                {
+                    HttpMethod = "Post",
+                    InsertionMode = InsertionMode.Replace,
+                    UpdateTargetId = "texto",
+                    OnSuccess ="limpiar"
+                    
+                }))
+                    {
+
+                        <textarea class="form-control" rows="3" id="mensaje" name="mensaje"></textarea>
+                        <input type="submit" value="Enviar" />
+                    }
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-2 nopadding">
+        <img src="~/Fotos/@ViewBag.foto2" width="200" height="160" />
+    </div>
+</div>
+
+<script>
+    function limpiar() {
+        $(document.getElementById('mensaje')).val('')
+    }
+</script>
