--- a/Red_Social_Citas/Views/Shared/_Logout-Layout.cshtml
+++ b/Red_Social_Citas/Views/Shared/_Logout-Layout.cshtml
@@ -68,6 +68,10 @@
             });
         });
     </script>
-
+    @if (ViewBag.error != null) { 
+    <script type="text/javascript">
+          alert('@ViewBag.error');
+    </script>
+    }
 </body>
 </html>
