--- a/Red_Social_Citas/Views/Usuario/Perfil.cshtml
+++ b/Red_Social_Citas/Views/Usuario/Perfil.cshtml
@@ -11,16 +11,26 @@
         <div class="panel panel-default">
             <div class="panel-heading"><span style="font-size:15px">Datos personales</span></div>
             <div class="panel-body" style="min-height:30em">
-                <table style="border-collapse:separate;border-spacing:10px;margin-left:40px" class="table-bordered">
-                    <tr>
-                        <td><img id="foto1" src="~/Fotos/@usuario.foto" width="242" height="200" /></td>
-                        <td>
-                            @using (@Html.BeginForm("Actulizar", "Usuario", FormMethod.Post))
-                            {
+                @using (@Html.BeginForm("Actualizar", "Usuario", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                {
+                    <table style="border-collapse:separate;border-spacing:10px;margin-left:40px" class="table-bordered">
+
+                        <tr>
+
+                            <td>
+                                <img id="foto1" src="~/Fotos/@usuario.foto" width="242" height="200" />
+                            </td>
+                            <td>
+
                                 <table style="margin-left:10px;border-collapse:separate;border-spacing:10px">
                                     <tr>
                                         <td>
-                                            <input type="submit" name="foto" value="Actualizar Foto" />
+                                            <input type="file" name="foto1" accept="image/*" onchange="readURL(this);" />
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <input type="submit" name="actFoto" value="Actualizar foto" />
                                         </td>
                                     </tr>
                                     <tr>
@@ -28,32 +38,33 @@
                                             <input type="submit" name="perfil" value="Perfil Completo" />
                                         </td>
                                     </tr>
-                                </table>
-                            }
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="negrita">Nombre: </td>
-                        <td>@usuario.nom_usu</td>
-                    </tr>
-                    <tr>
-                        <td class="negrita">Apellidos: </td>
-                        <td>@usuario.apePat_usu @usuario.apeMat_usu</td>
-                    </tr>
-                    <tr>
-                        <td class="negrita">Edad: </td>
-                        <td>@usuario.calcularEdad(usuario.fecNac_usu)</td>
-                    </tr>
-                    <tr>
-                        <td class="negrita">Sexo: </td>
-                        <td>@usuario.sexo_usu</td>
-                    </tr>
-                    <tr>
-                        <td class="negrita">Correo: </td>
-                        <td>@usuario.email_usu</td>
-                    </tr>
-                </table>
 
+                                </table>
+
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="negrita">Nombre: </td>
+                            <td>@usuario.nom_usu</td>
+                        </tr>
+                        <tr>
+                            <td class="negrita">Apellidos: </td>
+                            <td>@usuario.apePat_usu @usuario.apeMat_usu</td>
+                        </tr>
+                        <tr>
+                            <td class="negrita">Edad: </td>
+                            <td>@usuario.calcularEdad(usuario.fecNac_usu)</td>
+                        </tr>
+                        <tr>
+                            <td class="negrita">Sexo: </td>
+                            <td>@usuario.sexo_usu</td>
+                        </tr>
+                        <tr>
+                            <td class="negrita">Correo: </td>
+                            <td>@usuario.email_usu</td>
+                        </tr>
+                    </table>
+                }
             </div>
         </div>
     </div>
@@ -69,30 +80,40 @@
                             <td><img id="foto1" src="~/Fotos/@usu.foto" width="171" height="180" /></td>
                             <td>
                                 <table>
-                                    <tr><td class="negritaPorcentaje">@usu.porcentaje %</td>@if (usu.favorito == 1)
-                                    {<td><img id="foto1" src="~/Images/favorito.png" width="20" height="20" /></td>}</tr>
+                                    <tr>
+                                        <td><span class="negritaPorcentaje">@usu.porcentaje %</span></td>@if (usu.favorito == 1)
+                                        {
+                                            <td><img id="foto1" src="~/Images/favorito.png" width="20" height="20" /></td>}
+                                    </tr>
                                     <tr><td class="negrita">Nombre: </td><td>@usu.nom_usu</td></tr>
                                     <tr><td class="negrita">Apellidos: </td><td>@usu.apePat_usu @usu.apeMat_usu</td></tr>
                                     <tr><td class="negrita">Edad:</td><td>@usu.calcularEdad(usu.fecNac_usu)</td></tr>
 
-                                    @using (@Html.BeginForm("OpcionesPareja","Usuario",FormMethod.Post))
+                                    @using (@Html.BeginForm("OpcionesPareja", "Usuario", FormMethod.Post))
                                     {
-                                        <tr><td>
-                                            <input type="hidden" name="cod_usu2" value="@usu.cod_usu"/>
-                                            
-                                            <input type="submit" name="mensaje" value="Mensaje"/>
-                                            </td></tr>
-                                        if (usu.favorito == 0) { 
-                                        <tr><td>
-                                            <input type="submit" name="favorito" value="Agregar Favoritos"/>
-                                            </td></tr>
-                                        }   
-                                        <tr><td>
-                                            <input type="submit" name="perfil" value="Ver Perfil completo"/>
-                                            </td></tr>
+                                        <tr>
+                                            <td>
+                                                <input type="hidden" name="cod_usu2" value="@usu.cod_usu" />
+
+                                                <input type="submit" name="mensaje" value="Mensaje" />
+                                            </td>
+                                        </tr>
+                                        if (usu.favorito == 0)
+                                        {
+                                            <tr>
+                                                <td>
+                                                    <input type="submit" name="favorito" value="Agregar Favoritos" />
+                                                </td>
+                                            </tr>
+                                        }
+                                        <tr>
+                                            <td>
+                                                <input type="submit" name="perfil" value="Ver Perfil completo" />
+                                            </td>
+                                        </tr>
                                     }
 
-                                    
+
                                 </table>
                             </td>
                         </tr>
@@ -102,3 +123,21 @@
         </div>
     </div>
 </div>
+
+<script>
+
+    function readURL(input) {
+        if (input.files && input.files[0]) {
+            var reader = new FileReader();
+
+            reader.onload = function (e) {
+                $('#foto1')
+                    .attr('src', e.target.result)
+                    .width(150)
+                    .height(200);
+            };
+
+            reader.readAsDataURL(input.files[0]);
+        }
+    }
+</script>
